force-app/main/default/objects/Tracking__c/Tracking__c.object-meta.xml
<CustomObject>
    <label>Tracking</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>