force-app/main/default/objects/Tracking__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Trackings</relationshipLabel>
    <relationshipName>Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>