force-app/main/default/objects/Tracking__c/fields/Approved_Bank__c.field-meta.xml
<CustomField>
    <fullName>Approved_Bank__c</fullName>
    <label>Approved Bank</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>BOB</fullName>
            </value>
            <value>
                <fullName>AXIS</fullName>
            </value>
            <value>
                <fullName>BOI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>